kubernetes-v2/personal/applications/conv/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: conv
  namespace: conv
  labels:
    app: conv

spec:
  replicas: 1

  selector:
    matchLabels:
      app: conv
  template:
    metadata:
      labels:
        app: conv
    spec:
      containers:
        - name: main

          image: ghcr.io/danvergara/morphos-server:0.6.0

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          ports:
            - name: http
              containerPort: 8080
