kubernetes-v2/personal/applications/conv/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: conv
  namespace: conv
  labels:
    app: conv

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: conv
